 [tool.poetry]
name = "dev-teletype"
version = "0.1.0"
description = "A fun way to take notes in your terminal, and save them as markup!"
authors = ["Rhys Johns <rhysjohnsdev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
